refactor!: Change namespace from Boatrace\Venture\Project to BVP\Stadium for better scalability

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Boatrace\\Venture\\Project\\": "src/"
+            "BVP\\Stadium\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Boatrace\\Venture\\Project\\Tests\\": "tests/"
+            "BVP\\Stadium\\Tests\\": "tests/"
         }
     }
 }
