--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^9.0 || ^10.0 || ^11.0 || ^12.0"
+        "php": "^8.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1 || ^11.1 || ^12.0"
