--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "shimomo/helper": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1 || ^11.1 || ^12.0"
